<resources>
    <string name="app_name" translatable="false">Weather</string>
    <string name="weather">Weather</string>
    <string name="weatherIn">Weather in \u0020</string>
    <string name="clickForExit">Press again to exit</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity: \u0020</string>
    <string name="atmPressure">Pressure: \u0020</string>
    <string name="windSpeed">Wind: \u0020</string>
    <string name="humiditySymbol">(%)</string>
    <string name="atmPressureSymbol">(mm./m.c.)</string>
    <string name="windSpeedSymbol">(m./sec.)</string>
    <string name="empty" translatable="false">Empty</string>
    <string name="item" translatable="false">Item</string>
    <string name="title_activity_main" translatable="false">Weather</string>
    <string name="Check_city">Check city:</string>
    <string name="close_app">Close App</string>
    <string name="close">Close</string>
    <string name="check_city">Check city</string>
    <string name="change_city">Change city?</string>
    <string name="ok" translatable="false">OK</string>
    <string name="about">About</string>
    <string name="creator" translatable="false">Created by Chizhikov Oleg: gpuf@bk.ru</string>
    <string name="place_not_found">Place not found</string>
    <string name="uri">en</string>
    <string name="Err">The data has not arrived yet…</string>
    <string name="in_your_city">in your city</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about_app">About APP</string>
    <string name="communicate">Communicate:</string>
    <string name="message_for_creator">Message for creator</string>
    <string name="contacts_creator">Contacts creator</string>
    <string name="redactor_list_cities">Edit list cities</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="edit">Edit</string>
    <string name="edited">Edited</string>
    <string name="yes">Yes</string>
    <string name="removed">removed</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="city">City</string>
    <string name="cancel">Cancel</string>
    <string name="err_empty_list">The list cannot be empty</string>
    <string name="weather_in_your_phone">Weather in your phone</string>
    <string name="sensor_is_not_detected">Sensor is not detected</string>
    <string name="contact_with_creator">Contact with creator</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="message">Message</string>it_is_not_message
    <string name="it_is_not_name">It is not name!</string>
    <string name="it_is_not_email">It is not email!</string>
    <string name="it_is_not_message">It is not message!</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="add_city">Add City</string>
    <string name="it_is_wrong_name_city"> It is wrong name city!</string>
    <string name="send">Send</string>
    <string name="find_place">I turn the globe and \n look for the weather in </string>
    <string name="find_not_place">Sorry… \n Not found this place. \n
        Check the name of the place.</string>
    <string name="send_email_title">Send mail...</string>
    <string name="check_email_data">Check that the data entered is correct</string>
    <string name="no_internet">No Internet connection</string>
    <string name="you_in">You in</string>
    <string name="add_this_place">Add this place to the list?</string>
    <string name="about_app_text">
        We are glad, that you have chosen our weather forecast analysis app.
        Our app broadcasts weather information from the OpenWeatherMap service. \n
        OpenWeatherMap is a network of private weather stations.
        Today it is more than 40,000 weather stations around the world.</string>
</resources>