<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_weather_in_phone"
            android:icon="@drawable/ic_settings_system_daydream_black_24dp"
            android:title="@string/weather_in_your_phone" />
        <item
            android:id="@+id/nav_redactor_list_cities"
            android:icon="@drawable/ic_format_list_bullet"
            android:title="@string/redactor_list_cities" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_child_care_black_24dp"
            android:title="@string/about_app" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_connect_create"
                android:icon="@drawable/ic_contact_mail_black_24dp"
                android:title="@string/contacts_creator" />
        </menu>
    </item>
</menu>
