<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_add_city"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/add_city"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_weather_in_phone"
        android:icon="@drawable/ic_settings_system_daydream_black_24dp"
        android:title="@string/weather_in_your_phone" />
    <item
        android:id="@+id/nav_redactor_list_cities"
        android:icon="@drawable/ic_format_list_bullet"
        android:title="@string/redactor_list_cities" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_child_care_black_24dp"
        android:title="@string/about_app" />
</menu>