<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainLinear">
    <TextView
        android:id="@+id/textViewWeather"
        android:text="@string/weatherIn"
        style="@style/MainTextWeather"/>
    <TextView
        android:id="@+id/temperatureValue"
        style="@style/TextViewTemperatureValue"/>
    <TextView
        android:id="@+id/rainfallValue"
        style="@style/TextViewRainfallValue"/>
    <TextView
        android:id="@+id/humidity"
        style="@style/TextViewParamWeather"
        android:text="@string/humidity"/>
    <TextView
        android:id="@+id/atmPressure"
        style="@style/TextViewParamWeather"
        android:text="@string/atmPressure"/>
    <TextView
        android:id="@+id/windSpeed"
        style="@style/TextViewParamWeather"
        android:text="@string/windSpeed"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>

